@@ -1,3 +1,6 @@
+2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* drag.cc,exult.cc,gamewin.h/cc: changed more vars from int to bool
+
 2000-11-25  Max Horn  <max@quendi.de>
 	* files/utils.cc: changed path_map to be a map of strings instead of a hash_map of char*
 	* files/utils.cc: made sure functions are named like some_noun
